# nidhogg

./: .gitignore  Dockerfile  Dockerfile.debug  README.md  debug_docker.sh  docker-compose.debug.yml  docker-compose.override.yml  docker-compose.yml  docker-entrypoint.sh  pyproject.toml  requirements.txt  run_scanner.sh  scan_package.py  setup.py
examples/: code_execution.py  data_exfiltration.py
nidhogg/: __init__.py  cli.py  main.py
nidhogg-env/: pyvenv.cfg
nidhogg/analysis/: __init__.py  analyzer.py  coverage.py  suspicious.py  taint.py
nidhogg/analyzers/: __init__.py  analyzer_factory.py  base_analyzer.py  behavioral_analyzer.py  call_analyzer.py  import_analyzer.py  opcode_analyzer.py
nidhogg/core/: __init__.py  archive_handler.py  config.py  event_system.py  import_handler.py  loader.py  module_loader.py  network_interceptor.py  safe_replacements.py  simulator.py  tracer.py  utils.py
nidhogg/reporting/: __init__.py  base_reporter.py  console_reporter.py  html_reporter.py  json_reporter.py  reporter_factory.py
nidhogg/rules/: __init__.py  finding.py  rule_engine.py
nidhogg/rules/definitions/: malware_patterns.json
nidhogg/utils/: __init__.py  debug.py
results/: evasive_samples_report.json
scripts/: nidhogg_scan.py
